--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
 
         <activity
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:name=".SplashActivity"
             android:exported="true">
 
@@ -24,6 +25,13 @@
         </activity>
 
         <activity
+            android:name=".LoginUsuario"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+            android:exported="true"
+            android:label="@string/app_name" />
+
+        <activity
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name" />
